--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@react-native-community/audio-toolkit": "2.0.2",
     "@react-native-community/masked-view": "^0.1.1",
-    "@react-native-community/slider": "2.0.8",
+    "@react-native-community/slider": "^2.0.8",
     "expo": "^36.0.0",
     "mem": ">=4.0.0",
     "react": "16.9.0",
@@ -22,7 +22,7 @@
     "react-native-platform-touchable": "1.1.1",
     "react-native-reanimated": "^1.0.0-alpha",
     "react-native-safe-area-context": "^0.6.0",
-    "react-native-screens": "^1.0.0-alpha",
+    "react-native-screens": "2.0.0-alpha.12",
     "react-native-vector-icons": "6.6.0",
     "react-navigation": "4.0.10",
     "react-navigation-material-bottom-tabs": "2.1.5",
